--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container"></div>
+        <div class="container">
+            <div class="search-wrapper">
+                <input type="text" 
+                       id="country-inp" 
+                       placeholder="Enter a country name here..."/>
+                <button id="search-btn">Search</button>
+            </div>
+            <div id="result"></div>
+        </div>
         
         <script src="script.js" async defer></script>
     </body>
